--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <div class="col s12">
       <img src="" alt="" class="responsive-img" id="preview">
     </div>
-    <div class="col s12"></div>
+    <div class="col s12  divider"></div>
     <div class="col s12">
       <img src="" alt="" class="responsive-img" id="output">
     </div>
