--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/css/materialize.min.css">
   <script src="/js/jquery-3.2.1.min.js" charset="utf-8"></script>
-  <script src="/js/materialize.min.js" charset="utf-8"></script>
+  <!-- <script src="/js/materialize.min.js" charset="utf-8"></script> -->
   <script src="/js/script.js" charset="utf-8"></script>
   <title>Document</title>
 </head>
